# SearchEngine_CovidArticles

./: .gitignore  AVLNode.h  AVLTree.h  AuthorIndex.h  CMakeLists.txt  DocStat.cpp  DocStat.h  Document.cpp  Document.h  DocumentProcessor.cpp  DocumentProcessor.h  DocumentWord.cpp  DocumentWord.h  HashTable.cpp  HashTable.h  IndexHandler.cpp  IndexHandler.h  MetadataEntry.h  QueryProcessor.cpp  QueryProcessor.h  README.md  SearchEngine.R  SearchEngineData.csv  UserInterface.cpp  UserInterface.h  Word.cpp  Word.h  WordIndex.h  main.cpp
stemmer/: porter2_stemmer.h
